# arm_slam_calibration

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  RUN_NOTES.md  package.xml
bags/: calibration_data.bag  calibration_data_example.bag  tag_ground_truth.bag  tag_ground_truth_example.bag
config/: calibrate.yaml  initial_params.txt  initial_params.yaml  params_example.yaml
include/joint_calibration/: ChainModel.h  Optimizer.h  ParameterManager.h  Utils.h
launch/: apriltag_detector_node.launch  bringup.launch  calibrate.launch  capture_calibration_data.launch  capture_ground_truth.launch  connect_tf_trees.launch  create_artificial_tfs.launch  ground_truth_node.launch  set_ground_truth.launch  virtual_sensor_node.launch
min_variance_calibration/: CMakeLists.txt  package.xml
min_variance_calibration/examples/: calibration_data.bag  ground_truth_params.yaml  initial_params.yaml  params_for_noise_test.yaml
min_variance_calibration/include/min_variance_calibration/: ChainModel.h  Optimizer.h  ParameterManager.h  Utils.h
min_variance_calibration/launch/: run_calibration.launch  run_demo_calibration.launch  sweep_joint_errors.launch  sweep_noise.launch  visualize_results.launch
min_variance_calibration/results/: combined.csv  joint_results.csv  output4.txt  output5.txt  results.csv  results1.csv  results10.csv  results14.csv  results15.csv  results16.csv  results22.csv  results3.csv  results5.csv  results7.csv
min_variance_calibration/results/old/: output6-1.txt  output6.txt  results2.csv  results6.csv
min_variance_calibration/results/old/to_combine/: results11.csv  results12.csv  results13.csv  results21.csv  results9.csv
min_variance_calibration/results/sweep_joint_errors/: joint_results.csv  joint_results1.csv  joint_results_all.csv  joint_results_all2.csv  joint_results_base_all_0_180.csv  joint_results_base_optimizer_0_180.csv
min_variance_calibration/results/sweep_noise/: results19.csv
min_variance_calibration/results/temp/: combined.csv  results.csv
min_variance_calibration/results/to_combine/: results17.csv  results18.csv  results20.csv  results8.csv
min_variance_calibration/rviz/: config.rviz
min_variance_calibration/scripts/: calibrate.py  calibration_bridge.py  combine.py  helper_functions.py  plot_results.py  sweep_joint_errors.py  sweep_noise_levels.py  visualize_results.py
min_variance_calibration/scripts/visualization/: combine.py  plot_results.py  sweep_joint_errors.py  sweep_noise_levels.py  visualize_results.py
min_variance_calibration/src/: ChainModel.cpp  GetEndEffectorPositionServer.cpp  Optimizer.cpp  ParameterManager.cpp  ProjectPointsServer.cpp  RunCalibrationServer.cpp  Utils.cpp
min_variance_calibration_msgs/: CMakeLists.txt  package.xml
min_variance_calibration_msgs/msg/: CalibrationData.msg  FreeParameters.msg  OptimizationParameters.msg  ParameterInfo.msg  PointGroup.msg
min_variance_calibration_msgs/srv/: CalibrationResults.msg  GetEndEffectorPosition.srv  ProjectPoints.srv  RunCalibration.srv
msg/: CalibrationData.msg  CalibrationMsg.msg  FreeParameters.msg  OptimizationParameters.msg  ParameterInfo.msg  PointGroup.msg  PointLabeled.msg
scripts/: artificial_tfs.py  calibration_bridge.py  capture_ground_truth.py  data_formatter.py  ground_truth_creator.py  ground_truth_tfs.py  gui.py  joint_state_republisher.py  virtual_sensors.py  virtual_tfs.py
scripts/gui/: calibration_gui.py  ground_truth_gui.py
src/: Calibrate.cpp  ChainModel.cpp  Optimizer.cpp  ParameterManager.cpp  Utils.cpp  calibrate.cpp
src/Optimizer/: Optimizer.cpp  Optimizer.h
