<?xml version="1.0"?>
<package format="2">
  <name>arm_slam_calibration</name>
  <version>0.0.0</version>
  <description>The arm_slam_calibration package</description>
  <maintainer email="aphung@olin.edu">Amy Phung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>apriltag_ros</depend>
</package>
