<?xml version="1.0"?>
<package format="2">
  <name>joint_calibration</name>
  <version>0.0.0</version>
  <description>A calibration to jointly calibrate mapping between
    encoder/potentiometer measurements to joint angles and camera intrinsics
    and extrinsics</description>
  <maintainer email="aphung@olin.edu">Amy Phung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>message_filters</depend>
  <depend>apriltag_ros</depend>
  <depend>apriltag_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_calibration</depend>
  <depend>robot_calibration_msgs</depend>
</package>
