<?xml version="1.0"?>
<package format="2">
  <name>joint_calibration</name>
  <version>0.0.0</version>
  <description>A calibration to jointly calibrate mapping between
    encoder/potentiometer measurements to joint angles and camera intrinsics
    and extrinsics</description>
  <maintainer email="aphung@olin.edu">Amy Phung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rosbag</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
