<?xml version="1.0"?>
<package format="2">
  <name>min_variance_calibration_msgs</name>
  <version>0.0.0</version>
  <description>Messages for calibrating a robot using the minimum variance
    method</description>
  <maintainer email="aphung@olin.edu">Amy Phung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
